dashboard buttons alignment is fixed

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -93,7 +93,7 @@
     @apply w-full text-sm text-left text-gray-500 dark:text-gray-400 border-separate border border-slate-100;
   }
   .table__header {
-    @apply text-xs uppercase text-white bg-lime-600 overflow-hidden sticky top-0;
+    @apply text-xs uppercase text-white bg-lime-600 overflow-hidden sticky top-0 z-50;
   }
   .table__row {
     @apply border-b dark:border-gray-600;
